--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <div class="navbar navbar-dark bg-primary">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Spectre</a>
+      <a class="navbar-brand" href="<%= projects_url %>">Spectre</a>
     </div>
   </div>
 </div>
