--- a/app/views/shared/_test_filters.html.erb
+++ b/app/views/shared/_test_filters.html.erb
@@ -1,10 +1,10 @@
 <div class="test-filters">
   <h2>Filters</h2>
   <form method="get" action="" class="form form-inline">
-    <%= select_tag 'name', options_for_select(tests.names, params[:name]), include_blank: 'Name', class: 'form-control' %>
-    <%= select_tag 'browser', options_for_select(tests.browsers, params[:browser]), include_blank: 'Browser', class: 'form-control' %>
-    <%= select_tag 'platform', options_for_select(tests.platforms, params[:platform]), include_blank: 'Platform', class: 'form-control' %>
-    <%= select_tag 'size', options_for_select(tests.sizes, params[:size]), include_blank: 'Size', class: 'form-control' %>
+    <%= select_tag 'name', options_for_select(test_filters.names, params[:name]), include_blank: 'Name', class: 'form-control' %>
+    <%= select_tag 'browser', options_for_select(test_filters.browsers, params[:browser]), include_blank: 'Browser', class: 'form-control' %>
+    <%= select_tag 'platform', options_for_select(test_filters.platforms, params[:platform]), include_blank: 'Platform', class: 'form-control' %>
+    <%= select_tag 'size', options_for_select(test_filters.sizes, params[:size]), include_blank: 'Size', class: 'form-control' %>
     <%= select_tag 'result', options_for_select(['Pass', 'Fail'], params[:result]), include_blank: 'Result (all)', class: 'form-control' %>
   </form>
 </div>
