Allow screenshots to be optional in views, and default to failed tests only

--- a/app/views/suites/show.html.erb
+++ b/app/views/suites/show.html.erb
@@ -37,7 +37,7 @@
 </table>
 
 <h2>Baselines</h2>
-<%= render 'shared/test_filters', tests: @baselines %>
+<%= render 'shared/test_filters', test_filters: @baselines %>
 <table class="table table-striped">
   <thead class="thead-inverse">
     <tr>
