--- a/app/views/shared/_test_filters.html.erb
+++ b/app/views/shared/_test_filters.html.erb
@@ -5,6 +5,8 @@
     <%= select_tag 'browser', options_for_select(test_filters.browsers, params[:browser]), include_blank: 'Browser', class: 'form-control' %>
     <%= select_tag 'platform', options_for_select(test_filters.platforms, params[:platform]), include_blank: 'Platform', class: 'form-control' %>
     <%= select_tag 'size', options_for_select(test_filters.sizes, params[:size]), include_blank: 'Size', class: 'form-control' %>
-    <%= select_tag 'result', options_for_select(['Pass', 'Fail'], params[:result]), include_blank: 'Result (all)', class: 'form-control' %>
+    <% if test_filters.filter_by_result %>
+      <%= select_tag 'result', options_for_select(['Passed', 'Failed'], params[:result]), class: 'form-control' %>
+    <% end %>
   </form>
 </div>
