--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -7,9 +7,9 @@
       Size: <%= test.width %>px
     </small></p>
   </th>
-  <td><%= image_tag test.screenshot_baseline.url unless test.screenshot_baseline.nil? %></td>
-  <td><%= image_tag test.screenshot.url unless test.screenshot.nil? %></td>
-  <td><%= image_tag test.screenshot_diff.url unless test.screenshot_diff.nil? %></td>
+  <td><%= link_to(image_tag(test.screenshot_baseline_thumbnail_url), test.screenshot_baseline.url) unless test.screenshot_baseline.nil? %></td>
+  <td><%= link_to(image_tag(test.screenshot_thumbnail_url), test.screenshot.url) unless test.screenshot.nil? %></td>
+  <td><%= link_to(image_tag(test.screenshot_diff_thumbnail_url), test.screenshot_diff.url) unless test.screenshot_diff.nil? %></td>
   <td>
     <span class="label label-<%= test.pass? ? 'success' : 'danger' %>"><%= test.pass? ? 'Passed' : 'Failed' %></span>
     <% if !test.baseline && test.screenshot %>
