--- a/app/views/suites/show.html.erb
+++ b/app/views/suites/show.html.erb
@@ -1,3 +1,7 @@
+<%
+@page_title = "#{@suite.name} — #{@suite.project.name}"
+%>
+
 <ul class="breadcrumb">
   <li><%= link_to 'Projects', projects_url %></li>
   <li><%= link_to @suite.project.name, projects_url %></li>
