--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -13,7 +13,10 @@
   <td>
     <span class="label label-<%= test.pass? ? 'success' : 'danger' %>"><%= test.pass? ? 'Passed' : 'Failed' %></span>
     <% if !test.baseline && test.screenshot %>
-      <br><br><%= link_to("Set as baseline", test_url(test, baseline: true), method: 'put', class: 'btn btn-secondary btn-sm') %>
+      <%= form_for(test, remote: true) do |f| %>
+        <%= f.hidden_field :baseline, value: true %>
+        <%= f.submit 'Set as baseline', class: 'btn btn-secondary btn-sm' %>
+      <% end %>
     <% end %>
   </td>
 </tr>
