--- a/app/views/suites/show.html.erb
+++ b/app/views/suites/show.html.erb
@@ -58,7 +58,7 @@
         <th><%= test.name %></th>
         <td><%= test.browser %></td>
         <td><%= test.platform %></td>
-        <td><%= test.width %></td>
+        <td><%= test.size %></td>
         <td><%= link_to(image_tag(test.screenshot_thumbnail_url), test.screenshot.url) %></td>
       </tr>
     <% end %>
