--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -13,6 +13,9 @@
   <td><%= link_to(thumbnail(test.screenshot_diff_thumbnail), test.screenshot_diff.url) unless test.screenshot_diff.nil? %></td>
   <td>
     <span class="label label-<%= test.pass? ? 'success' : 'danger' %>"><%= test.pass? ? 'Passed' : 'Failed' %></span>
+    <% if test.five_consecutive_failures %>
+      <span class="label label-warning">Consistently failing test</span>
+    <% end %>
     <% if !test.baseline && test.screenshot %>
       <%= form_for(test, remote: true) do |f| %>
         <%= f.hidden_field :baseline, value: true %>
