Use friendly time ago for dates

--- a/app/views/suites/show.html.erb
+++ b/app/views/suites/show.html.erb
@@ -23,7 +23,7 @@
     <% @suite.runs.reversed.limit(5).each do |run| %>
       <tr>
         <th><%= link_to "##{run.sequential_id}", project_suite_run_path(run.suite.project, run.suite, run) %></th>
-        <td class="text-muted"><%= run.created_at.to_formatted_s(:long_ordinal) %></td>
+        <td class="text-muted"><%= format_date(run.created_at) %></td>
         <td>
           <% if run.tests.count == 0 %>
             <span class="label label-info">No tests</span>
