--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,26 @@
   border-radius: 0;
 }
 
+@keyframes logo-animation{
+  0% {
+    transform:  translate(0, 0);
+  }
+  50% {
+    transform:  translate(0, -3px);
+  }
+  100% {
+    transform:  translate(0, 0);
+  }
+}
+
+img.navbar-brand__logo {
+  animation: logo-animation linear 3s;
+  animation-iteration-count: infinite;
+  display: inline-block;
+  vertical-align: baseline;
+  width: 12px;
+}
+
 img {
   max-width: 250px;
 }
