--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -5,7 +5,7 @@
       Browser: <%= test.browser %><br>
       Plaform: <%= test.platform %><br>
       Size: <%= test.size %><br>
-      <%= link_to('Go to URL', test.url) unless test.url.blank? %>
+      <%= link_to('Go to URL', test.source_url) unless test.source_url.blank? %>
     </small></p>
   </th>
   <td><%= link_to(thumbnail(test.screenshot_baseline_thumbnail), test.screenshot_baseline.url) unless test.screenshot_baseline.nil? %></td>
