--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -16,7 +16,7 @@
     <% if test.five_consecutive_failures %>
       <span class="label label-warning">Consistently failing test</span>
     <% end %>
-    <% if !test.baseline && test.screenshot %>
+    <% if !test.pass? && !test.baseline? %>
       <%= form_for(test, remote: true) do |f| %>
         <%= f.hidden_field :baseline, value: true %>
         <%= f.submit 'Update baseline', class: 'btn btn-secondary btn-sm' %>
