--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,12 +1,13 @@
 <tr id="test_<%= test.id %>" class="<%= "table-danger" unless test.pass?  %>">
   <th>
     <%= test.name %>
-    <p><small>
-      Browser: <%= test.browser %><br>
-      Plaform: <%= test.platform %><br>
-      Size: <%= test.size %><br>
-      <%= link_to('Go to URL', test.source_url) unless test.source_url.blank? %>
-    </small></p>
+    <p>
+      <small>
+        <%= test.browser %> (<%= test.platform %>) @ <%= test.size %>
+        <%= raw "<br>#{link_to('Go to URL', test.source_url)}" unless test.source_url.blank? %>
+        <%= raw "<br>#{link_to('Baseline image', test.baseline.screenshot_url)}" if test.baseline? %>
+      </small>
+    </p>
   </th>
   <td><%= link_to(thumbnail(test.screenshot_baseline_thumbnail), test.screenshot_baseline.url) unless test.screenshot_baseline.nil? %></td>
   <td><%= link_to(thumbnail(test.screenshot_thumbnail), test.screenshot.url) unless test.screenshot.nil? %></td>
