Tidier page titles

--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -1,5 +1,5 @@
 <%
-@page_title = "#{@run.suite.name} ##{@run.sequential_id} — #{@run.suite.project.name}"
+@page_title = "#{@run.suite.name} ##{@run.sequential_id} (#{@run.suite.project.name})"
 %>
 
 <ul class="breadcrumb">
