--- a/app/views/suites/show.html.erb
+++ b/app/views/suites/show.html.erb
@@ -1,5 +1,5 @@
 <%
-@page_title = "#{@suite.name} — #{@suite.project.name}"
+@page_title = "#{@suite.name} (#{@suite.project.name})"
 %>
 
 <ul class="breadcrumb">
