--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,35 +2,13 @@
  *= require_self
  */
 
-@import "bootstrap";
+@import 'vendor/reset';
+@import 'utilities/variables';
+@import 'utilities/mixins';
+@import 'base/elements';
+@import 'base/layout';
+@import 'components/masthead';
 
-.main {
-  margin-top: 30px;
-}
-
-.navbar {
-  border-radius: 0;
-}
-
-@keyframes logo-animation{
-  0% {
-    transform:  translate(0, 0);
-  }
-  50% {
-    transform:  translate(0, -3px);
-  }
-  100% {
-    transform:  translate(0, 0);
-  }
-}
-
-img.navbar-brand__logo {
-  animation: logo-animation linear 3s;
-  animation-iteration-count: infinite;
-  display: inline-block;
-  vertical-align: baseline;
-  width: 12px;
-}
 
 img {
   max-width: 250px;
