--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,13 @@
   </head>
   <body>
 
-    <div class="navbar navbar-dark bg-primary">
+    <div class="masthead">
       <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="<%= projects_url %>">Spectre <img src="/favicon.gif" alt="" class="navbar-brand__logo"></a>
-        </div>
+        <a class="masthead__name" href="<%= projects_url %>">Spectre <img src="/favicon.gif" alt="" class="masthead__logo"></a>
       </div>
     </div>
 
-    <div class="main container">
+    <div class="container">
       <%= yield %>
     </div>
 
