--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,32 +3,17 @@
  */
 
 @import 'vendor/reset';
+
 @import 'utilities/variables';
 @import 'utilities/mixins';
+
 @import 'base/elements';
 @import 'base/layout';
+@import 'base/utilities';
+
+@import 'components/baseline';
+@import 'components/breadcrumb';
+@import 'components/filters';
+@import 'components/label';
 @import 'components/masthead';
-
-
-img {
-  max-width: 250px;
-}
-
-h1 {
-  margin-bottom: 30px;
-}
-
-h2 {
-  //margin-bottom: 20px;
-}
-
-.test-filters {
-  background: #f9f9f9;
-
-  padding: 20px;
-
-  h2 {
-    font-size: 16px;
-    font-weight: bold;
-  }
-}
+@import 'components/test';
