--- a/app/assets/stylesheets/utilities/mixins.scss
+++ b/app/assets/stylesheets/utilities/mixins.scss
@@ -49,3 +49,13 @@
     font-size: #{$size / 10}rem;
   }
 }
+
+@mixin plain-link {
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+
+  &:hover {
+    background-color: transparent;
+  }
+}
