--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,20 +1,20 @@
-<tr id="test_<%= test.id %>" class="<%= "table-danger" unless test.pass?  %>">
+<tr id="test_<%= test.id %>" class="test <%= "table-danger" unless test.pass?  %>">
   <th>
     <%= test.name %>
     <p>
-      <small>
+      <small class="text-muted">
         <%= test.browser %> (<%= test.platform %>) @ <%= test.size %>
         <%= raw "<br>#{link_to('Go to URL', test.source_url)}" unless test.source_url.blank? %>
       </small>
     </p>
   </th>
-  <td><%= link_to(thumbnail(test.screenshot_baseline_thumbnail), test.screenshot_baseline.url) unless test.screenshot_baseline.nil? %></td>
-  <td><%= link_to(thumbnail(test.screenshot_thumbnail), test.screenshot.url) unless test.screenshot.nil? %></td>
-  <td><%= link_to(thumbnail(test.screenshot_diff_thumbnail), test.screenshot_diff.url) unless test.screenshot_diff.nil? %></td>
+  <td><%= link_to(thumbnail(test.screenshot_baseline_thumbnail), test.screenshot_baseline.url, class: 'test__image') unless test.screenshot_baseline.nil? %></td>
+  <td><%= link_to(thumbnail(test.screenshot_thumbnail), test.screenshot.url, class: 'test__image') unless test.screenshot.nil? %></td>
+  <td><%= link_to(thumbnail(test.screenshot_diff_thumbnail), test.screenshot_diff.url, class: 'test__image') unless test.screenshot_diff.nil? %></td>
   <td>
-    <span class="label label-<%= test.pass? ? 'success' : 'danger' %>"><%= test.pass? ? 'Passed' : 'Failed' %></span>
+    <span class="label label--<%= test.pass? ? 'pass' : 'fail' %>"><%= test.pass? ? 'Passed' : 'Failed' %></span>
     <% if test.five_consecutive_failures %>
-      <span class="label label-warning">Consistently failing test</span>
+      <span class="label label--warning">Consistently failing test</span>
     <% end %>
     <% if !test.pass? && !test.baseline? %>
       <%= form_for(test, remote: true) do |f| %>
