--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -3,7 +3,7 @@
     <%= test.name %>
     <p>
       <small class="text-muted">
-        <%= test.browser %> (<%= test.platform %>) @ <%= test.size %>
+        <%= test.browser %> @ <%= test.size %>
         <%= raw "<br>#{link_to('Go to URL', test.source_url)}" unless test.source_url.blank? %>
       </small>
     </p>
