--- a/app/assets/stylesheets/components/baseline.scss
+++ b/app/assets/stylesheets/components/baseline.scss
@@ -8,11 +8,12 @@
 
 .baseline__image {
   @include plain-link;
-  display: inline-block;
-  width: 100%;
+  display: block;
 
   img {
+    box-sizing: border-box;
     display: block;
     border: 3px solid colour('light-grey');
+    width: 300px
   }
 }
