--- a/app/assets/stylesheets/components/test.scss
+++ b/app/assets/stylesheets/components/test.scss
@@ -1,5 +1,13 @@
 .test {
+  th, td {
+    padding: 3em 1em;
+  }
 
+  &:first-child {
+    th, td {
+      padding-top: .75em;
+    }
+  }
 }
 
 .test__name {
@@ -18,6 +26,13 @@
   }
 }
 
-.test__set-baseline {
-  margin-top: 5px;
+.test__status {
+  margin-bottom: 5px;
+}
+
+.test__diff {
+  @include font-size('small');
+  display: block;
+  margin-bottom: 5px;
+  white-space: nowrap;
 }
