Better table column names

--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -16,9 +16,9 @@
 <table class="table table-striped ">
   <thead class="thead-inverse">
     <tr>
-      <th>Test</th>
+      <th>Test name</th>
       <th>Baseline</th>
-      <th>Compare</th>
+      <th>Comparison</th>
       <th>Diff</th>
       <th>Result</th>
     </tr>
