--- a/app/views/suites/show.html.erb
+++ b/app/views/suites/show.html.erb
@@ -45,7 +45,7 @@
 <table>
   <thead>
     <tr>
-      <th>Test</th>
+      <th>Test name</th>
       <th>Browser</th>
       <th>Size</th>
       <th>Screenshot</th>
