--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title><%= @page_title %> — Spectre</title>
     <link rel="icon" href="/favicon.gif">
     <%= stylesheet_link_tag 'application', media: 'all' %>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700" rel="stylesheet" type="text/css">
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
   </head>
