Don't show "0.0%" when there's no difference

--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -12,7 +12,7 @@
   <td><%= link_to(thumbnail(test.screenshot_thumbnail), test.screenshot.url, class: 'test__image') unless test.screenshot.nil? %></td>
   <td><%= link_to(thumbnail(test.screenshot_diff_thumbnail), test.screenshot_diff.url, class: 'test__image') unless test.screenshot_diff.nil? %></td>
   <td>
-    <span class="test__diff text-muted"><%= test.diff %>% difference</span>
+    <span class="test__diff text-muted"><%= test.diff == 0 ? 'No' : "#{test.diff}%" %> difference</span>
     <span class="test__status label label--<%= test.pass? ? 'pass' : 'fail' %>"><%= test.pass? ? 'Pass' : 'Fail' %></span>
     <% if test.five_consecutive_failures %>
       <span class="label label--warning">Consistently failing test</span>
