--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,12 +1,12 @@
 <tr id="test_<%= test.id %>" class="<%= "table-danger" unless test.pass?  %>">
   <th>
     <%= test.name %>
-    <p><small>
-      Browser: <%= test.browser %><br>
-      Plaform: <%= test.platform %><br>
-      Size: <%= test.size %><br>
-      <%= link_to('Go to URL', test.source_url) unless test.source_url.blank? %>
-    </small></p>
+    <p>
+      <small>
+        <%= test.browser %> (<%= test.platform %>) @ <%= test.size %>
+        <%= raw "<br>#{link_to('Go to URL', test.source_url)}" unless test.source_url.blank? %>
+      </small>
+    </p>
   </th>
   <td><%= link_to(thumbnail(test.screenshot_baseline_thumbnail), test.screenshot_baseline.url) unless test.screenshot_baseline.nil? %></td>
   <td><%= link_to(thumbnail(test.screenshot_thumbnail), test.screenshot.url) unless test.screenshot.nil? %></td>
@@ -16,7 +16,7 @@
     <% if test.five_consecutive_failures %>
       <span class="label label-warning">Consistently failing test</span>
     <% end %>
-    <% if !test.baseline && test.screenshot %>
+    <% if !test.pass? && !test.baseline? %>
       <%= form_for(test, remote: true) do |f| %>
         <%= f.hidden_field :baseline, value: true %>
         <%= f.submit 'Update baseline', class: 'btn btn-secondary btn-sm' %>
