--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,20 +4,19 @@
     <title><%= @page_title %> — Spectre</title>
     <link rel="icon" href="/favicon.gif">
     <%= stylesheet_link_tag 'application', media: 'all' %>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700" rel="stylesheet" type="text/css">
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
   </head>
   <body>
 
-    <div class="navbar navbar-dark bg-primary">
+    <div class="masthead">
       <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="<%= projects_url %>">Spectre <img src="/favicon.gif" alt="" class="navbar-brand__logo"></a>
-        </div>
+        <a class="masthead__name" href="<%= projects_url %>">Spectre <img src="/favicon.gif" alt="" class="masthead__logo"></a>
       </div>
     </div>
 
-    <div class="main container">
+    <div class="container">
       <%= yield %>
     </div>
 
