Travis CI build

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,12 @@
   <body>
 
     <div class="masthead">
-      <div class="container">
+      <div class="container header">
         <a class="masthead__name" href="<%= projects_url %>">Spectre<img src="/favicon.gif" alt="" class="masthead__logo"></a>
-
       </div>
     </div>
 
-    <div class="container">
+    <div class="container body">
       <%= yield %>
     </div>
 
