--- a/app/assets/stylesheets/base/elements.scss
+++ b/app/assets/stylesheets/base/elements.scss
@@ -66,10 +66,13 @@ button,
 input[type='submit'],
 input[type='button'] {
   @include font-family('merriweather');
-  font-size: 12px;
+  font-size: 14px;
+  font-weight: bold;
   color: colour('white');
   appearance: none;
   padding: .5em .75em;
+  border-radius: 5px;
+  float: right;
   cursor: pointer;
   background-color: colour('warm-grey');
 
